# adv_2024

./: README.md  check_python_file.sh  gitpod.dockerfile  pyproject.toml  sonar-project.properties
.github/workflows/: black_format.yml  python_test.yml  third_party_checks.yml
solutions/: adv_2024_01.py  adv_2024_02.py  adv_2024_03.py  adv_2024_04.py  adv_2024_05.py  adv_2024_06.py  adv_2024_07.py  adv_2024_08.py  adv_2024_09.py  adv_2024_10.py  adv_2024_11.py  adv_2024_12.py  adv_2024_13.py  adv_2024_14.py  adv_2024_15.py  adv_2024_16.py  adv_2024_17.py  adv_2024_18.py  adv_2024_19.py  adv_2024_20.py  adv_2024_21.py  adv_2024_22.py  adv_2024_23.py  adv_2024_24.py  adv_2024_25.py
tests/: test_adv_2024_00.py  test_adv_2024_01.py  test_adv_2024_02.py  test_adv_2024_03.py  test_adv_2024_04.py  test_adv_2024_05.py  test_adv_2024_06.py  test_adv_2024_07.py  test_adv_2024_08.py  test_adv_2024_09.py  test_adv_2024_10.py  test_adv_2024_11.py  test_adv_2024_12.py  test_adv_2024_13.py  test_adv_2024_14.py  test_adv_2024_15.py  test_adv_2024_16.py  test_adv_2024_17.py  test_adv_2024_18.py  test_adv_2024_19.py  test_adv_2024_20.py  test_adv_2024_21.py  test_adv_2024_22.py  test_adv_2024_23.py  test_adv_2024_24.py  test_adv_2024_25.py  test_utils.py
tests/test_input_data/: data_adv_2024_12_r3_small.txt  data_adv_2024_12_r_small.txt
