[tool.poetry]
name = "adv-2024"
version = "1.0.0"
description = "solutions of Advent of Code 2024"
authors = ["piotr.idzik <vil02_adv@10g.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
numpy = "2.3.4"
networkx = "3.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-xdist = "3.8.0"
pylint = "4.0.2"
flake8 = "7.3.0"
flake8-bugbear = "25.10.21"
flake8-pytest-style = "2.2.0"
ruff = "0.14.4"
coverage = "7.11.0"
black = "25.9.0"
mypy = "1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
