[tool.poetry]
name = "adv-2024"
version = "1.0.0"
description = "solutions of Advent of Code 2024"
authors = ["piotr.idzik <vil02_adv@10g.pl>"]
readme = "README.md"
packages = [{include = "solutions"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
numpy = "2.3.5"
networkx = "3.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
pytest-xdist = "3.8.0"
pylint = "4.0.4"
flake8 = "7.3.0"
flake8-bugbear = "25.11.29"
flake8-pytest-style = "2.2.0"
ruff = "0.14.7"
coverage = "7.12.0"
black = "25.11.0"
mypy = "1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
